--- a/EcuTweaker/src/main/AndroidManifest.xml
+++ b/EcuTweaker/src/main/AndroidManifest.xml
@@ -92,6 +92,9 @@
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
             </intent-filter>
+            <meta-data
+                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                android:resource="@xml/device_filter" />
         </activity>
         <activity
             android:name=".DeviceListActivity"
